# MDP_Project

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  Dockerfile  Dockerfile.dev  README.md  bambu_results_0.xml  bambu_results_1.xml  bambu_results_10.xml  bambu_results_11.xml  bambu_results_12.xml  bambu_results_13.xml  bambu_results_14.xml  bambu_results_15.xml  bambu_results_16.xml  bambu_results_17.xml  bambu_results_18.xml  bambu_results_2.xml  bambu_results_3.xml  bambu_results_4.xml  bambu_results_5.xml  bambu_results_6.xml  bambu_results_7.xml  bambu_results_8.xml  bambu_results_9.xml  compile.sh  compile_bambu.sh  delete_files.sh  device_bambu.txt  generated_for_cpu.c  generated_systolic.c  memory_allocation_12.xml  memory_allocation_2.xml  memory_allocation_3.xml  requirements.txt  results.txt  run_bambu.sh  run_compare_old.sh  simulate_top_level.sh  (+9 more)
.claude/: settings.local.json
HACC/: generate_hacc_project.py
HACC/20260514_170825/: accel_config.json  script_to_xo.tcl  xo_to_xclbin.sh
HACC/20260514_170825/host/: CMakeLists.txt  UserConfig.cmake
HACC/20260514_170825/host/src/: harness.cpp
docs/: hacc_deployment.md  sa_model.md
output/: FF_output.txt
scripts/: run_conv_single.sh  run_conv_single_seq.sh  run_conv_sweep.sh  run_ex6_adder_sweep.sh  setup_experiments.py
src/: bambu_calibration.json  conv_harness.py  extract_schedule.py  ff_parser.py  fit_formula.py  fit_sa_platform.py  formula_fit.json  generator.py  generator_common.py  generator_conv.py  generator_gemm.py  main.py  mapping_types.py  model.py  model_profiles.py  parser.py  sa_model.py  schedule_data.json
tests/: harvest_bambu.py  test_eyeriss_conv.py  test_eyeriss_gemm.py  test_sa_dim_spec.py  test_sa_model_accuracy.py  test_sa_model_parse.py
(+706 files in other folders)
